add prompts
